--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="chips" id="countries_chips" role="group" aria-label="관심 국가"></div>
       </div>
 
-      <!-- ✅ 개인정보 수집·이용 동의 (문구 밑줄 → 모달) -->
+      <!-- ✅ 개인정보 수집·이용 동의 (인라인 링크 → 모달) -->
       <section class="privacy-consent card-lite" aria-live="polite">
         <div class="privacy-checkbox">
           <input id="consent" name="consent" type="checkbox" />
@@ -118,11 +118,10 @@
   </div>
 
   <script>
-    // Apps Script 엔드포인트
     window.NEWSLETTER_ENDPOINT =
       "https://script.google.com/macros/s/AKfycbwI0A-B819UVyiscv3KtxxF8BkuEATODuUJ2ZVFwMIgXDHsdWEEnGmCeLbY9mMr4Nun/exec";
   </script>
-  <script src="./assets/app.js?v=20251015-inline-link-align"></script>
+  <script src="./assets/app.js?v=20251015-inline-link-align2"></script>
 
   <!-- 모달 오픈/닫기 & 링크 클릭시 체크박스 토글 방지 + 포커스 잔상 제거 -->
   <script>
@@ -132,7 +131,7 @@
       const closeBtn = document.getElementById('close-privacy');
 
       function openModal(e){
-        if (e){ e.preventDefault(); e.stopPropagation(); } // ✅ 체크박스 토글 방지
+        if (e){ e.preventDefault(); e.stopPropagation(); } // 체크박스 토글 방지
         modal.setAttribute('aria-hidden','false');
         modal.classList.add('is-open');
         closeBtn.focus();
@@ -141,7 +140,7 @@
       function closeModal(){
         modal.setAttribute('aria-hidden','true');
         modal.classList.remove('is-open');
-        // ✅ 포커스 네모 잔상 제거
+        // 포커스 잔상 제거
         openLink.blur();
         document.body.style.overflow = '';
       }
